--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<!--Goal: https://jakevdp.github.io/-->
+<!--Present project like Dr. VanderPlas-->
+<!--Info: https://docs.github.com/en/pages/quickstart-->
+<p>I'm hosted with GitHub Pages. Under development, projects coming soon...</p>
 </body>
 </html>
